examples/memecached-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: memcached-statefulset
spec:
  selector:
    matchLabels:
      app: memcached-pod
  serviceName: memcached
  replicas: 1
  template:
    metadata:
      labels:
        app: memcached-pod
    spec:
      containers:
      -   name: memcached
          image: memcached:1.5
          ports:
          - containerPort: 11211
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "1"
