examples/memecached-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcached-service
  labels:
    app: memcached-service
spec:
  ports:
  - name: memcached
    port: 11211
    targetPort: 11211
  clusterIP: None
  selector:
    app: memcached-pod
