examples/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  mysql-service
  labels:
    app: mysql-service
spec:
  ports:
  - name: mysql #mysql-5.7
    port: 3306
    targetPort: 3306
  clusterIP: None
  selector:
    app: mysql-pod
